package com.example.demo.entity.vehicle;

public enum VehicleStatus {
    AVAILABLE, WAREHOUSE_TO_SENDER,SENDER_TO_WAREHOUSE,WAREHOUSE_TO_RECEIVER,RECEIVER_TO_WAREHOUSE,CANCELED;

}
